# modern-python-setup

./: .flake8  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  README.md  dev-requirements.txt  docker-compose-dev.yml  docker-compose.yml  init.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
MPSSRC/: __init__.py
docs/: MPSSRC.rst  conf.py  index.rst  modules.rst
src/: hello_world.py
src/hello_world/: __init__.py  hello_world.py
tests/: hello_world_test.py
