[tool.poetry]
name = "modern-python-setup"
version = "0.1.0"
description = "A modern python project setup."
authors = ["Milan van Wouden <milanvanwouden@live.nl>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pyupgrade = "^3.3.1"
typeguard = "^2.13.3"
pytest-cov = "^4.0.0"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.3.1"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.11
packages = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest]
minversion = 7
testpaths = ["tests"]

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    | .git
    | .mypy_cache
    | .pytest_cache
    | venv
    | build
    | dist
  )/
'''

[tool.isort]
py_version = 311
profile = "black"
line_length = 79
multi_line_output = 5
include_trailing_comma = true
